sample/errors/sample_0e.nev

func main() -> int
{
    let a = [ x | x in [ 1, 2, 3 ] : int; x in [ 1, 2, 3 ] : int ] : int;

    0
}
